<resources>
    <string name="app_name">Cubikate</string>
    <string name="serverURL">casa</string>

    <string name="lbl_TituloAltaUsuario">Alta de Usuarios</string>
    <string name="lbl_TituloAltaMaestros">Alta de Maestros</string>

    <string name="txt_Usuario">Usuario</string>
    <string name="txt_Contrasenia">Contraseña</string>

    <string name="txt_RUT">RUT</string>
    <string name="txt_Nombre">Nombre</string>
    <string name="txt_Apellido">Apellidos</string>
    <string name="txt_Direccion">Dirección</string>
    <string name="txt_Telefono">Teléfono</string>
    <string name="txt_Email">Correo Electrónico</string>

    <string name="btn_Aceptar">Guardar</string>
    <string name="btn_Cancelar">Cancelar</string>
    <string name="btn_Registrarse">Registrarse</string>
    <string name="btn_Buscar">Buscar</string>

    <string name="Chk_Gasfiter">Gasfiter</string>
    <string name="chk_Electricista">Electricista</string>
    <string name="title_activity_frm_prueba">frmPrueba</string>
    <string name="title_activity_main_user">MainUserActivity</string>
    <string name="mainuser_SearchActivityTitle">Buscar Maestro</string>
    <string name="mainuser_checkboxElectrico">Electrico</string>
    <string name="mainuser_checkboxGasfiter">Gasfiter</string>
    <string name="mainuser_searchButton">Buscar...</string>
    <string name="mainuser_directionLabel">Direccion</string>
    <string name="mainuser_especialidad">Especialidad</string>
    <string name="mainuser_descripcionRequerimiento">Necesidad</string>
    <string name="mainuser_searchInputTextBox">Ingrese su dirección...</string>
    <string name="todo">TODO</string>
    <string name="title_activity_v_maps_maestros">Map</string>
    <string-array name="mainuser_Especialidad">
        <item>Electrico</item>
        <item>Gasfiter</item>
    </string-array>
</resources>
