<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frmAltaUsuario">

    <ScrollView
        android:id="@+id/svPrincipal"
        android:layout_width="420dp"
        android:layout_height="731dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/llListado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblTituloAltaUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="117dp"
                android:layout_marginLeft="117dp"
                android:layout_marginTop="24dp"
                android:text="@string/lbl_TituloAltaUsuario"
                android:textSize="@dimen/fab_margin"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txtUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="9dp"
                android:ems="10"
                android:hint="@string/txt_Usuario"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtContrasenia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/txt_Contrasenia"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/txtRUT"
                android:layout_width="179dp"
                android:layout_height="44dp"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/txt_RUT"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="362dp"
                android:layout_height="44dp"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/txt_Nombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtApellido"
                android:layout_width="362dp"
                android:layout_height="44dp"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/txt_Apellido"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtDireccion"
                android:layout_width="362dp"
                android:layout_height="44dp"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/txt_Direccion"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/txt_Telefono"
                android:inputType="phone" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="362dp"
                android:layout_height="44dp"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/txt_Email"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btnAceptar"
                android:layout_width="226dp"
                android:layout_height="51dp"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="21dp"
                android:onClick="btnAceptar_click"
                android:text="@string/btn_Aceptar" />



        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>